update to junit 5 dependencies. closes #4